kubernetes/resource_sample/service-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
spec: 
  type: LoadBalancer 
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
